--- a/ExamenProgreso3/Views/PaginaConsulta.xaml
+++ b/ExamenProgreso3/Views/PaginaConsulta.xaml
@@ -8,11 +8,13 @@
             Text="Welcome to .NET MAUI!"
             VerticalOptions="Center" 
             HorizontalOptions="Center" />
-        
-       
-        <!--<SearchBar
-            x:Name="searchBar"
-            SearchCommand="{Binding SearchCommand}"
-            SearchCommandParameter="{Binding Source={x:Reference searchBar}, Path=Text}}"-->
+
+        <Entry Placeholder="Nombre del país" Text="{Binding NombrePais}" />
+        <Button Text="Buscar" Command="{Binding BuscarPaisCommand}" />
+        <Button Text="Limpiar" Command="{Binding LimpiarCommand}" />
+        <Label Text="{Binding Pais.Name}" />
+        <Label Text="{Binding Pais.Region}" />
+        <Label Text="{Binding Pais.Map}" />
+
     </VerticalStackLayout>
 </ContentPage>
